<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="credits">\u2022 <b>covid19india.org</b> for India specific API.
        \n\n\u2022 <b>corona.lmao.ninja</b> for Global API.
        \n\n\u2022 <b>Flaticon</b> for all Social Media Icons.
        \n\n\u2022 <b>Vipul Jha</b> for UI reference.
    </string>
    <string name="libs">\u2022 <b>Eaze Graph</b> for showing Pie charts.
        \n\n\u2022 <b>Circle ImageView</b> for showing my Photo.
        \n\n\u2022 <b>Picasso</b> for showing Flag Images.
    </string>
    <string name="info">\u2022 A Programmer/Developer.
        \n\u2022 An Android Enthusiast/Developer.
    </string>
    <string name="version">v1.0</string>
    <string name="together"><b>Stay Home, Stay Safe.</b></string>
    <string name="developer"><b>Developed by Rohit Jangid.</b></string>
</resources>