<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/together"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/covid"
            android:layout_width="wrap_content"
            android:src="@drawable/covid19tracker"
            android:layout_height="150sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="COVID-19 Tracker"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="#fff"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:id="@+id/developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/developer"/>
    </LinearLayout>

</LinearLayout>