<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_margin="5sp"
        app:cardCornerRadius="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/rohfl"
                app:civ_border_color="#fff"
                app:civ_border_width="1.0dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Rohit Jangid"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="#c4c4c4"
                android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/github"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:onClick="openGit"
                android:layout_gravity="center"
                android:src="@drawable/git" />

            <ImageView
                android:id="@+id/linkedIn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                android:onClick="openLinkedin"
                android:src="@drawable/linked" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                android:onClick="openInsta"
                android:src="@drawable/insta" />


            </LinearLayout>




        </LinearLayout>





    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="Credits"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:text="@string/credits"
                android:textColor="#fff"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Libraries"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="10dp"
                android:text="@string/libs"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>